objects/Account.object
<CustomObject>
    <fields>
        <fullName>AMP_Advisor__c</fullName>
        <label>AMP Advisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMP_Facebook__c</fullName>
        <label>AMP Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMP_Instagram__c</fullName>
        <label>AMP Instagram</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMP_Name__c</fullName>
        <label>AMP Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMP_Organizer_Id__c</fullName>
        <description>This is the ID of the Organizer in the Goldstar system</description>
        <externalId>true</externalId>
        <label>AMP Organizer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMP_Ranking__c</fullName>
        <label>AMP Ranking</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMP_Twitter__c</fullName>
        <label>AMP Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMP_Website__c</fullName>
        <label>AMP Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <label>Calendar</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Territories__c</fullName>
        <label>Territories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
</CustomObject>